public/assets/skin/overrides/overrides.css
body {
    min-height: 300px;
}
#nestable-contextual {
	max-width: none;
}

.topbar.dropdown-menu {
	margin-top: 10px;
	border-top-color: #3498db !important;
	border-top: 3px solid transparent;
	padding: 0;
}

.topbar.dropdown-menu:after {
	content: "";
    position: absolute;
    width: 0;
    height: 0;
    border-color: transparent;
    border-style: solid;
    left: 13px;
    bottom: 100%;
    border-width: 0 10px 10px;
    border-bottom-color: #4a89dc;
}


.dd-primary > .dd-content {
	border: 1px solid #f9d58b;
}

#sidebar_left {
	width: 230px;
}

.sb-l-o #content_wrapper,
.sb-r-c #content_wrapper,
body.sb-l-o #topbar.affix,
#content_wrapper,
#topbar.affix
 {
    /*margin-left: 230px;*/
	margin-left: 0px;
}

.sb-l-c #content_wrapper {
	margin-left: 0;
}

/*#content_wrapper {
    position: inherit;
}*/

#first-topbar {
	z-index: 2;
    position: relative;
    width: 100%;
    min-height: 60px;
    padding: 10px 21px;
    background: #fafafa;
    border-bottom: 1px solid #e0e0e0;
}
#first-topbar.alt {
    padding: 17px 22px !important;
    background: #e7e7e7;
    border-bottom: 1px solid #ddd;
}

#first-topbar.alt .breadcrumb {
	font-size: 14px;
}


#topbar.alt {
	min-height: 0 !important;
	padding: 17px 22px !important;
}

#topbar {
	transition: none !important;
}

.sb-r-o #topbar.affix {
	top: 0px;
	padding-top: 70px;
	right: 300px;
}
.sb-r-c #topbar.affix {
	top: 0px;
	padding-top: 70px;
	right: 0 !important;
}
.sb-l-c #topbar.affix {
	top: 0px;
	padding-top: 70px;
	right: 300px;
	margin-left: 0 !important;
}

.domain-list {
	list-style: none;
	padding-left: 0;
}

.domain-list > li:first-child {
    margin-top: 0px;
}

.domain-list > li {
    margin-top: 10px;
}

.domain-item a:hover,
.domain-item a:focus {
   text-decoration: none;
}

.domain-title {
	display: block;
    height: auto;
    margin: 5px 0;
    padding: 7px 0 7px 10px;
    color: #777;
    text-decoration: none;
    cursor: pointer;
    font-weight: 600;
    border: 1px solid #ddd;
    background: #f5f5f5;
    -webkit-border-radius: 2px;
    border-radius: 2px;
    font-size: 13px;
    line-height: 20px;
    color: #FFF;
    background-color: #4a89dc !important;
    border-color: #4a89dc !important;
}

.domain-title a,
.campaign-title a {
	color: #fff;
	font-size: 10px;
	margin-right: 10px;
}

.campaign-list,
.lander-list {
	padding-top: 5px;
	padding-left: 30px;
	padding-bottom: 15px !important;
    position: relative;
    list-style: none;
}

.campaign-item {
	display: block;
    position: relative;
    margin: 0;
    padding: 0;
    min-height: 20px;
    font-size: 13px;
    line-height: 20px;
}

.campaign-title {
	color: #FFF;
    background-color: #3bafda !important;
    border-color: #3bafda !important;
    display: block;
    height: auto;
    margin: 5px 0;
    padding: 7px 0px 7px 10px;
    
    text-decoration: none;
    font-weight: 600;
    border: 1px solid #ddd;
    background: #f5f5f5;
    -webkit-border-radius: 2px;
    border-radius: 2px;
}

.lander-item {
	display: block;
    position: relative;
    margin: 0;
    padding: 0;
    min-height: 20px;
    font-size: 13px;
    line-height: 20px;    
}

.lander-title {
	color: #777;
    border: 1px solid #ddd;
    background: #f5f5f5;

    display: block;
    height: auto;
    margin: 5px 0;
    padding: 7px 10px;
    text-decoration: none;
    font-weight: 600;
    border: 1px solid #ddd;
    -webkit-border-radius: 2px;
    border-radius: 2px;
}

#sidebar_left {
    background-color: #232323;
}


.domain-controls {
    float: right;
    position: relative;
    display: block;
    width: 100px;
    margin-top: -7px;
    padding-left: 5px;
    padding-right: 5px;
    padding-bottom: 5px;
    background: rgba(0, 0, 0, 0.098);
    border-left: 1px solid rgba(0, 0, 0, 0.06);
}

.domain-notification-label {
    margin-top: 5px;
    width: 100%;
}


.campaign-controls {
    float: right;
    position: relative;
    display: block;
    width: 35px;
    margin-top: -7px;
    padding-left: 5px;
    padding-right: 5px;
    padding-bottom: 5px;
    background: rgba(0, 0, 0, 0.098);
    border-left: 1px solid rgba(0, 0, 0, 0.06);
}

.campaign-notification-label {
    margin-top: 10px;
    position: relative;
    right: 2px;
    top: 1px;
}

.glyphicon-refresh-animate {
    -animation: spin .7s infinite linear;
    -webkit-animation: spin2 1.5s infinite linear;
}

@-webkit-keyframes spin2 {
    from { -webkit-transform: rotate(0deg);}
    to { -webkit-transform: rotate(360deg);}
}

@keyframes spin {
    from { transform: scale(1) rotate(0deg);}
    to { transform: scale(1) rotate(360deg);}
}

/*.collapsing {
    -webkit-transition: none;
    transition: none;
}*/

.collapse-icon {
    font-size: 10px;
    margin-right: 10px;
}

.w170 {
    width: 170px !important;
}

.mtn16 {
    margin-top: -15px !important;
}

#sidebar_left, #content_wrapper {
  padding-top: 60px;
}

.ml14 {
    margin-left: 14px !important;
}
.mt3 {
    margin-top: 3px !important;
}

.pt0 {
    padding-top: 0px !important;
}
.pb0 {
    padding-bottom: 0px !important;
}

.modal-header {
    background-color: #fafafa;
}

.lds-top-nav ul li a {
    line-height: 29px;
    /*background-color: #101010 !important;*/
}
.lds-top-nav ul li a {
    padding-left: 15px !important;
    padding-right: 15px !important;
    color: #e9e9e9 !important;
}


.lds-top-nav ul li a:hover {
    opacity: 0.8;
}

.navbar-brand:hover {
    opacity: 0.8;
}

.settings-topbar {
    padding: 0px 21px;
    background: #fafafa;
    border-bottom: 1px solid #e0e0e0;
}

.kv-upload-progress .progress {
    display: none;
}

